# pyCascadia

./: CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  block-median-testing.py  close_boundary.py  cut_geotiff.py  environment.yml  grid.html  grid.py  index.html  loaders.html  loaders.py  remove-restore.py  remove_restore.html  remove_restore.py  requirements.txt  setup.cfg  setup.py  test_grid.py  test_loaders.py  utility.html  utility.py
.github/workflows/: ci.yml  gen_docs.yml
contour_generator/: close_boundary.py
notebooks/: example_remove_restore.ipynb
pycascadia/: grid.py  loaders.py  remove_restore.py  utility.py
scripts/: close_boundary.py  delete_variable  generate_contour.sh
test_data/: contains_extra_var.nc  filenames.txt  small_sample.nc  small_sample.tif
tests/: test_grid.py  test_loaders.py  test_remove_restore.py  test_utility.py
