[metadata]
name=pyCascadia
version=0.1
#license=MIT
author=Jamie Quinn; Alessandro Felder
author_email=
url = https://github.com/UCL/pyCascadia

[options]
packages = pycascadia
python_requires = >=3.6
install_requires =
  pygmt
  matplotlib
  rasterio
  xarray
scripts =
  scripts/delete-variable

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    remove-restore = pycascadia.remove_restore:main

[flake8]
per-file-ignores = __init__.py:F401
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
