[metadata]
name=pyCascadia
version=1.0.0
license=MPL
author=Alessandro Felder; Jamie Quinn
author_email=rc-softdev@ucl.ac.uk
url=https://github.com/UCL/pyCascadia
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent

[options]
packages = pycascadia
python_requires = >=3.7
include_package_data = True
install_requires =
  pygmt >= 0.3.1
  matplotlib
  rasterio
  xarray
  pandas
scripts =
  scripts/delete-variable

[options.extras_require]
dev =
    pytest
    bump2version
    pdoc3
    black
    flake8
    twine

[options.entry_points]
console_scripts =
    remove-restore = pycascadia.remove_restore:main

[flake8]
per-file-ignores = __init__.py:F401
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9

[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
